<resources>
    <string name="app_name">Contact manager app</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="passward">Password</string>
    <string name="fill_all_field">Fill all field</string>
    <string name="signup">SignUp</string>
    <string name="login">LogIn</string>
    <string name="welcome_to_signin_screen">Welcome to signIn Screen</string>
    <string name="add_contects">Add Contects</string>
    <string name="phoneNumber">Phone No.</string>
    <string name="add">Add</string>
    <string name="contect_saved">Successfully Contact Saved</string>
</resources>